Add pagination and filters for Authors views
