# api_v2/urls.py
@@ -10,8 +10,9 @@ from rest_framework.routers import DefaultRouter
 from .views import (
     BookView,
     BookIdView,
-    AuthorView,
-    AuthorIdView,
+    # AuthorView,
+    # AuthorIdView,
+    AuthorViewSet,
     UserViewSet,
     OrderView,
     OrderIdView,
@@ -21,12 +22,13 @@ from .views import (
 
 router = DefaultRouter()
 router.register(r"users", UserViewSet, basename="user")
+router.register(r"authors", AuthorViewSet, basename="user")
 
 urlpatterns = [
     path("books/", csrf_exempt(BookView.as_view()), name="all_books"),
     path("books/<int:book_id>/", csrf_exempt(BookIdView.as_view())),
-    path("authors/", csrf_exempt(AuthorView.as_view()), name="all_authors"),
-    path("authors/<int:author_id>/", csrf_exempt(AuthorIdView.as_view())),
+    # path("authors/", csrf_exempt(AuthorView.as_view()), name="all_authors"),
+    # path("authors/<int:author_id>/", csrf_exempt(AuthorIdView.as_view())),
     path("token/", TokenObtainPairView.as_view(), name="token_obtain_pair"),
     path("token/refresh/", TokenRefreshView.as_view(), name="token_refresh"),
     path("api/token/verify/", TokenVerifyView.as_view(), name="token_verify"),
